--- a/app/vues/templates/admin/vAdminEnchereAjouter.twig
+++ b/app/vues/templates/admin/vAdminEnchereAjouter.twig
@@ -1,4 +1,4 @@
-<section>
+<section class="admin-form">
 	<h2>{{ titre }}</h2>
 
 	<form method="POST" action="admin?entite=enchere&action=a" enctype="multipart/form-data">
