--- a/app/vues/templates/frontend/vAccueil.twig
+++ b/app/vues/templates/frontend/vAccueil.twig
@@ -15,16 +15,8 @@
 
 	<div class="carrousel">
 		{% for enchere in nouveautes %}
-			<article class="stampcard">
-				<a aria-label="button-like" class="stampcard-button-like" href="#">
-					<svg class="svg-icon like-button" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
-						<title>Like Button</title>
-						<desc>Like Button</desc>
-						<g fill="none">
-							<path class="like-button-path" stroke="#000" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" d="M12,9.05,10.88,7.93a3.16,3.16,0,0,0-4.48,0h0a3.17,3.17,0,0,0,0,4.47L12,18l5.6-5.6a3.17,3.17,0,0,0,0-4.47h0a3.16,3.16,0,0,0-4.48,0Z"/>
-						</g>
-					</svg>
-				</a>
+			<article
+				class="stampcard">
 				<!-- image -->
 				<a href="enchere?enchere_id={{ enchere.enchere_id }}">
 					<picture>
@@ -93,16 +85,8 @@
 	</h2>
 	<div class="carrousel">
 		{% for enchere in coupsCoeur %}
-			<article class="stampcard">
-				<a aria-label="button-like" class="stampcard-button-like" href="#">
-					<svg class="svg-icon like-button" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
-						<title>Like Button</title>
-						<desc>Like Button</desc>
-						<g fill="none">
-							<path class="like-button-path" stroke="#000" stroke-width="1.5px" stroke-linecap="round" stroke-linejoin="round" d="M12,9.05,10.88,7.93a3.16,3.16,0,0,0-4.48,0h0a3.17,3.17,0,0,0,0,4.47L12,18l5.6-5.6a3.17,3.17,0,0,0,0-4.47h0a3.16,3.16,0,0,0-4.48,0Z"/>
-						</g>
-					</svg>
-				</a>
+			<article
+				class="stampcard">
 				<!-- image -->
 				<a href="enchere?enchere_id={{ enchere.enchere_id }}">
 					<picture>
@@ -175,8 +159,8 @@
 				<!-- metadonnes enchère -->
 				<aside>
 					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi enim laborum
-																																																																																																																																																																																																																												                                    expedita fugiat quam, esse ut? Molestiae voluptate adipisci, ullam, quidem nisi
-																																																																																																																																																																																																																												                                    minus aliquam quisquam neque rerum inventore explicabo deserunt...</span>
+																																																																																																																																																																																																																																		                                    expedita fugiat quam, esse ut? Molestiae voluptate adipisci, ullam, quidem nisi
+																																																																																																																																																																																																																																		                                    minus aliquam quisquam neque rerum inventore explicabo deserunt...</span>
 				</aside>
 				<!-- bouton Lire l'article -->
 				<footer>
@@ -192,8 +176,8 @@
 				</h3>
 				<aside>
 					<span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, quas, maiores
-																																																																																																																																																																																																																												                                    expedita libero eius facere, magnam dolore laudantium doloremque aspernatur fugiat
-																																																																																																																																																																																																																												                                    atque quaerat alias eveniet ex cum modi totam iusto?...</span>
+																																																																																																																																																																																																																																		                                    expedita libero eius facere, magnam dolore laudantium doloremque aspernatur fugiat
+																																																																																																																																																																																																																																		                                    atque quaerat alias eveniet ex cum modi totam iusto?...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
@@ -207,8 +191,8 @@
 				</h3>
 				<aside>
 					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem libero minima rem
-																																																																																																																																																																																																																												                                    dignissimos sapiente fuga, maiores illum distinctio, beatae architecto aspernatur
-																																																																																																																																																																																																																												                                    consectetur voluptatem id quia sit explicabo dicta delectus commodi!...</span>
+																																																																																																																																																																																																																																		                                    dignissimos sapiente fuga, maiores illum distinctio, beatae architecto aspernatur
+																																																																																																																																																																																																																																		                                    consectetur voluptatem id quia sit explicabo dicta delectus commodi!...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
@@ -222,8 +206,8 @@
 				</h3>
 				<aside>
 					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores amet voluptates,
-																																																																																																																																																																																																																												                                    quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate
-																																																																																																																																																																																																																												                                    accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
+																																																																																																																																																																																																																																		                                    quos accusamus fugit perspiciatis fugiat eaque. Nulla, eius quo quas cupiditate
+																																																																																																																																																																																																																																		                                    accusamus doloribus officiis, cum laboriosam harum, praesentium rem!...</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
@@ -242,8 +226,8 @@
 				</h3>
 				<aside>
 					<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quam. Nam
-																																																																																																																																																																																																																												                                    laboriosam cum doloribus, quaerat provident velit magni, praesentium vel nihil
-																																																																																																																																																																																																																												                                    debitis aliquam nobis assumenda inventore et! Voluptas, quae eligendi.</span>
+																																																																																																																																																																																																																																		                                    laboriosam cum doloribus, quaerat provident velit magni, praesentium vel nihil
+																																																																																																																																																																																																																																		                                    debitis aliquam nobis assumenda inventore et! Voluptas, quae eligendi.</span>
 				</aside>
 				<footer>
 					<a class="stampcard-button-cta" href="#">Lire l'article</a>
